include/popups, remove name  pmx-

--- a/_includes/popups/filter-date.html
+++ b/_includes/popups/filter-date.html
@@ -56,10 +56,10 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block ">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
+                    <div class="selector selector--readonly">
+                      <div class="selector__item selector__item--selected">
+                        <div class="selector__block ">
+                          <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                         </div>
                       </div>
                     </div>
@@ -79,10 +79,10 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block ">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
+                    <div class="selector selector--readonly">
+                      <div class="selector__item selector__item--selected">
+                        <div class="selector__block ">
+                          <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                         </div>
                       </div>
                     </div>
@@ -124,10 +124,10 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block ">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
+                    <div class="selector selector--readonly">
+                      <div class="selector__item selector__item--selected">
+                        <div class="selector__block ">
+                          <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
                         </div>
                       </div>
                     </div>
@@ -147,10 +147,10 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item pmx-selector__item--selected">
-                        <div class="pmx-selector__block ">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
+                    <div class="selector selector--readonly">
+                      <div class="selector__item selector__item--selected">
+                        <div class="selector__block ">
+                          <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
                         </div>
                       </div>
                     </div>
@@ -204,10 +204,10 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-                <div class="pmx-selector">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
-                    <div class="pmx-selector__block ">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">today</div>
+                <div class="selector">
+                  <div class="selector__item selector__item--selected">
+                    <div class="selector__block ">
+                      <div class="selector__blockPart selector__blockPart--field JS_text">today</div>
                     </div>
                   </div>
                 </div>
@@ -245,10 +245,10 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-                <div class="pmx-selector  JS_toggle--calendar">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
-                    <div class="pmx-selector__block ">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">18/04/18</div>
+                <div class="selector  JS_toggle--calendar">
+                  <div class="selector__item selector__item--selected">
+                    <div class="selector__block ">
+                      <div class="selector__blockPart selector__blockPart--field JS_text">18/04/18</div>
                     </div>
                   </div>
                 </div>
@@ -287,10 +287,10 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="include"%}
-                <div class="pmx-selector">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
-                    <div class="pmx-selector__block ">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">19/03/18-20/03/18</div>
+                <div class="selector">
+                  <div class="selector__item selector__item--selected">
+                    <div class="selector__block ">
+                      <div class="selector__blockPart selector__blockPart--field JS_text">19/03/18-20/03/18</div>
                     </div>
                   </div>
                 </div>
@@ -328,10 +328,10 @@
               <div class="itemBox__value">
 
                 {% include blocks/popup/include-exclude-selector.html selected="include"%}
-                <div class="pmx-selector">
-                  <div class="pmx-selector__item pmx-selector__item--selected">
-                    <div class="pmx-selector__block ">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
+                <div class="selector">
+                  <div class="selector__item selector__item--selected">
+                    <div class="selector__block ">
+                      <div class="selector__blockPart selector__blockPart--field JS_text">next 2 weeks (12/03/18-25/03/18)</div>
                     </div>
                   </div>
                 </div>
