--- a/_includes/popups/filter-tags.html
+++ b/_includes/popups/filter-tags.html
@@ -56,11 +56,11 @@
             <div class="itemBox__cellInner">
               <div class="itemBox__value">
 
-                <div class="pmx-selector pmx-selector--readonly">
-                  <div class="pmx-selector__item">
-                    <div class="pmx-selector__block">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
+                <div class="selector selector--readonly">
+                  <div class="selector__item">
+                    <div class="selector__block">
+                      <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                      <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
                     </div>
                   </div>
                 </div>
@@ -84,11 +84,11 @@
             <div class="itemBox__cellInner">
               <div class="itemBox__value">
 
-                <div class="pmx-selector pmx-selector--readonly">
-                  <div class="pmx-selector__item">
-                    <div class="pmx-selector__block">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
+                <div class="selector selector--readonly">
+                  <div class="selector__item">
+                    <div class="selector__block">
+                      <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                      <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
                     </div>
                   </div>
                 </div>
@@ -135,11 +135,11 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
+                    <div class="selector selector--readonly">
+                      <div class="selector__item">
+                        <div class="selector__block">
+                          <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
+                          <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
                         </div>
                       </div>
                     </div>
@@ -164,11 +164,11 @@
                 <div class="itemBox__cellInner">
                   <div class="itemBox__value">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
+                    <div class="selector selector--readonly">
+                      <div class="selector__item">
+                        <div class="selector__block">
+                          <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #e30022;" data-color="#e30022">ग़</div>
+                          <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
                         </div>
                       </div>
                     </div>
@@ -214,11 +214,11 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="include"%}
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Design</div>
+              <div class="selector selector--readonly">
+                <div class="selector__item">
+                  <div class="selector__block">
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #00bfff;" data-color="#00bfff">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text">Design</div>
                   </div>
                 </div>
               </div>
@@ -239,11 +239,11 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="include"%}
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Marketing</div>
+              <div class="selector selector--readonly">
+                <div class="selector__item">
+                  <div class="selector__block">
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #0bda51;" data-color="#0bda51">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text">Marketing</div>
                   </div>
                 </div>
               </div>
@@ -264,11 +264,11 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Front-end</div>
+              <div class="selector selector--readonly">
+                <div class="selector__item">
+                  <div class="selector__block">
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #f4ca16;" data-color="#f4ca16">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text">Front-end</div>
                   </div>
                 </div>
               </div>
@@ -289,11 +289,11 @@
             <div class="itemBox__value">
 
               {% include blocks/popup/include-exclude-selector.html selected="exclude"%}
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">Back-end</div>
+              <div class="selector selector--readonly">
+                <div class="selector__item">
+                  <div class="selector__block">
+                    <div class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: #E30022;" data-color="#E30022">ग़</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text">Back-end</div>
                   </div>
                 </div>
               </div>
