--- a/_includes/popups/ms-status.html
+++ b/_includes/popups/ms-status.html
@@ -19,7 +19,7 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner">
 
-          <div class="pmx-note pmx-note--error">
+          <div class="note note--error">
             <p>Item could not be selected. <a href="#">Read more</a></p>
           </div>
 
@@ -36,11 +36,11 @@
           <div class="itemBox__cellInner">
             <div class="itemBox__value">
 
-              <div class="pmx-selector pmx-selector--readonly">
-                <div class="pmx-selector__item">
-                  <div class="pmx-selector__block">
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
-                    <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item.name}}</div>
+              <div class="selector selector--readonly">
+                <div class="selector__item">
+                  <div class="selector__block">
+                    <div class="selector__blockPart selector__blockPart--prefix JS_color--prefix" style="background-color: {{item.color}}">{{item.icon}}</div>
+                    <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                   </div>
                 </div>
               </div>
