--- a/_includes/popups/new-multiselect.html
+++ b/_includes/popups/new-multiselect.html
@@ -55,10 +55,10 @@
                 <div class="itemBox__cellInner ">
                   <div class="itemBox__value">
 
-                    <div class="pmx-selector pmx-selector--readonly">
-                      <div class="pmx-selector__item">
-                        <div class="pmx-selector__block">
-                          <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item}}</div>
+                    <div class="selector selector--readonly">
+                      <div class="selector__item">
+                        <div class="selector__block">
+                          <div class="selector__blockPart selector__blockPart--field JS_text">{{item}}</div>
                         </div>
                       </div>
                     </div>
@@ -105,10 +105,10 @@
                 <div class="itemBox__value">
 
                   {% include blocks/popup/include-exclude-selector.html selected="include"%}
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item.name}}</div>
+                  <div class="selector selector--readonly">
+                    <div class="selector__item">
+                      <div class="selector__block">
+                        <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                       </div>
                     </div>
                   </div>
