--- a/_includes/popups/semsearch.html
+++ b/_includes/popups/semsearch.html
@@ -23,12 +23,12 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Any</span>
-                  <span class="pmx-selector__blockSeperator"></span>
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Typed keyword</span>
+            <div class="selector selector--readonly">
+              <div class="selector__item">
+                <div class="selector__block">
+                  <span class="selector__blockPart selector__blockPart--label">Any</span>
+                  <span class="selector__blockSeperator"></span>
+                  <span class="selector__blockPart selector__blockPart--field">Typed keyword</span>
                 </div>
               </div>
             </div>
@@ -43,12 +43,12 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">title</span>
-                  <span class="pmx-selector__blockSeperator"></span>
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Enhance logon formula for listly</span>
+            <div class="selector selector--readonly">
+              <div class="selector__item">
+                <div class="selector__block">
+                  <span class="selector__blockPart selector__blockPart--label">title</span>
+                  <span class="selector__blockSeperator"></span>
+                  <span class="selector__blockPart selector__blockPart--field">Enhance logon formula for listly</span>
                 </div>
               </div>
             </div>
@@ -63,12 +63,12 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Assigned to</span>
-                  <span class="pmx-selector__blockSeperator"></span>
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Nick De Jaeger</span>
+            <div class="selector selector--readonly">
+              <div class="selector__item">
+                <div class="selector__block">
+                  <span class="selector__blockPart selector__blockPart--label">Assigned to</span>
+                  <span class="selector__blockSeperator"></span>
+                  <span class="selector__blockPart selector__blockPart--field">Nick De Jaeger</span>
                 </div>
               </div>
             </div>
@@ -83,12 +83,12 @@
         <div class="itemBox__cellInner">
           <div class="itemBox__value">
 
-            <div class="pmx-selector pmx-selector--readonly">
-              <div class="pmx-selector__item">
-                <div class="pmx-selector__block">
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Priority</span>
-                  <span class="pmx-selector__blockSeperator"></span>
-                  <span class="pmx-selector__blockPart pmx-selector__blockPart--field">Critical</span>
+            <div class="selector selector--readonly">
+              <div class="selector__item">
+                <div class="selector__block">
+                  <span class="selector__blockPart selector__blockPart--label">Priority</span>
+                  <span class="selector__blockSeperator"></span>
+                  <span class="selector__blockPart selector__blockPart--field">Critical</span>
                 </div>
               </div>
             </div>
