--- a/_includes/popups/multiSelector-tags-colors.html
+++ b/_includes/popups/multiSelector-tags-colors.html
@@ -36,10 +36,10 @@
                 <div class="itemBox__value">
 
                   {% include javascript/colorToggle.html color=item.color %}
-                  <div class="pmx-selector pmx-selector--readonly">
-                    <div class="pmx-selector__item">
-                      <div class="pmx-selector__block">
-                        <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item.name}}</div>
+                  <div class="selector selector--readonly">
+                    <div class="selector__item">
+                      <div class="selector__block">
+                        <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                       </div>
                     </div>
                   </div>
@@ -89,10 +89,10 @@
               <div class="itemBox__value">
 
                 {% include javascript/colorToggle.html color=item.color %}
-                <div class="pmx-selector pmx-selector--readonly">
-                  <div class="pmx-selector__item">
-                    <div class="pmx-selector__block">
-                      <div class="pmx-selector__blockPart pmx-selector__blockPart--field JS_text">{{item.name}}</div>
+                <div class="selector selector--readonly">
+                  <div class="selector__item">
+                    <div class="selector__block">
+                      <div class="selector__blockPart selector__blockPart--field JS_text">{{item.name}}</div>
                     </div>
                   </div>
                 </div>
