--- a/_includes/popups/old-pmx-multiselect.html
+++ b/_includes/popups/old-pmx-multiselect.html
@@ -3,15 +3,15 @@
     <div class="newpickercontent">
       <div id="tabs" class="old-multiselect-tabs">
 
-        <div class="pmx-selector pmx-selector--expanded JS_selector JS_pmx-selector--incl-excl JS_pmx-selector--old">
-          <div class="pmx-selector__item pmx-selector__item--selected JS_selectorItem JS_pmx-selector__item--include">
-            <div class="pmx-selector__block">
-              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Include</div>
+        <div class="selector selector--expanded JS_selector JS_selector--incl-excl JS_selector--old">
+          <div class="selector__item selector__item--selected JS_selectorItem JS_selector__item--include">
+            <div class="selector__block">
+              <div class="selector__blockPart selector__blockPart--field">Include</div>
             </div>
           </div>
-          <div class="pmx-selector__item JS_selectorItem JS_pmx-selector__item--exclude">
-            <div class="pmx-selector__block">
-              <div class="pmx-selector__blockPart pmx-selector__blockPart--field">Exclude</div>
+          <div class="selector__item JS_selectorItem JS_selector__item--exclude">
+            <div class="selector__block">
+              <div class="selector__blockPart selector__blockPart--field">Exclude</div>
             </div>
           </div>
         </div>
