includes/blocks/popup: removed name pmx-

--- a/_includes/blocks/popup/calendar/ms-calendar-header.html
+++ b/_includes/blocks/popup/calendar/ms-calendar-header.html
@@ -2,10 +2,10 @@
   <li class="itemBox__cell">
     <div class="itemBox__cellInner">
 
-      <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__item">
-          <div class="pmx-selector__block ">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">←</div>
+      <div class="selector selector--readonly">
+        <div class="selector__item">
+          <div class="selector__block ">
+            <div class="selector__blockPart selector__blockPart--field">←</div>
           </div>
         </div>
       </div>
@@ -15,10 +15,10 @@
   <li class="itemBox__cell align-center">
     <div class="itemBox__cellInner">
 
-      <div class="pmx-selector">
-        <div class="pmx-selector__item pmx-selector__item--selected">
-          <div class="pmx-selector__block ">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">April</div>
+      <div class="selector">
+        <div class="selector__item selector__item--selected">
+          <div class="selector__block ">
+            <div class="selector__blockPart selector__blockPart--field">April</div>
           </div>
         </div>
       </div>
@@ -28,10 +28,10 @@
   <li class="itemBox__cell align-right">
     <div class="itemBox__cellInner">
 
-      <div class="pmx-selector pmx-selector--readonly">
-        <div class="pmx-selector__item">
-          <div class="pmx-selector__block ">
-            <div class="pmx-selector__blockPart pmx-selector__blockPart--field">→</div>
+      <div class="selector selector--readonly">
+        <div class="selector__item">
+          <div class="selector__block ">
+            <div class="selector__blockPart selector__blockPart--field">→</div>
           </div>
         </div>
       </div>
