--- a/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
+++ b/_includes/blocks/popup/ms-incl-excl-filter-sublist.html
@@ -3,10 +3,10 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Include">
 
-        <div class="pmx-selector pmx-selector--readonly">
-          <div class="pmx-selector__item">
-            <div class="pmx-selector__block">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Include</span>
+        <div class="selector selector--readonly">
+          <div class="selector__item">
+            <div class="selector__block">
+              <span class="selector__blockPart selector__blockPart--label">Include</span>
             </div>
           </div>
         </div>
@@ -18,10 +18,10 @@
     <li class="itemBox__cell">
       <div class="itemBox__cellInner JS_itemBox__cellInner--inclExcl" data-filter="Exclude">
 
-        <div class="pmx-selector pmx-selector--readonly">
-          <div class="pmx-selector__item">
-            <div class="pmx-selector__block">
-              <span class="pmx-selector__blockPart pmx-selector__blockPart--label">Exclude</span>
+        <div class="selector selector--readonly">
+          <div class="selector__item">
+            <div class="selector__block">
+              <span class="selector__blockPart selector__blockPart--label">Exclude</span>
             </div>
           </div>
         </div>
