--- a/_includes/blocks/popup/ms-tags-colors-color-sublist.html
+++ b/_includes/blocks/popup/ms-tags-colors-color-sublist.html
@@ -4,10 +4,10 @@
       <li class="itemBox__cell">
         <div class="itemBox__cellInner JS_itemBox__cellInner--color">
 
-          <div class="pmx-selector pmx-selector--readonly">
-            <div class="pmx-selector__item">
-              <div class="pmx-selector__block">
-                <span class="pmx-selector__blockPart pmx-selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}">ग़</span>
+          <div class="selector selector--readonly">
+            <div class="selector__item">
+              <div class="selector__block">
+                <span class="selector__blockPart selector__blockPart--prefix JS_Color JS_Color--prefix" style="background-color: {{item.color}};" data-color="{{item.color}}">ग़</span>
               </div>
             </div>
           </div>
